# TicTacVersus

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resorces.qrc  tictaktoe.h
include/: mainwindow.h  settingswindow.h  ui_mainwindow.h  ui_settingswindow.h
src/: main.cpp  mainwindow.cpp  settingswindow.cpp
styles/: style.qss
ui/: mainwindow.ui  settingswindow.ui
